testdata/invalid/no_header.cast
[0.5, "o", "hello"]
[1.0, "o", "world"]